--- a/AttendanceControl.API/AttendanceControl.API.csproj
+++ b/AttendanceControl.API/AttendanceControl.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AttendanceControl.API.DataAccess\AttendanceControl.API.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
