--- a/AttendanceControl.API.DataAccess/AttendanceControl.API.DataAccess.csproj
+++ b/AttendanceControl.API.DataAccess/AttendanceControl.API.DataAccess.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AttendanceControl.API.DataAccess.Contracts\AttendanceControl.API.DataAccess.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
